--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -16,31 +16,31 @@
 
 首先查看Hadoop DFS 支持的指令：
 
-![image-20211019185949057](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019185949057.png)
+![./pic/1.png](./pic/1.png)
 
 
 
 使用`ls` 指令查看DFS 中根目录下文件/文件夹的信息：
 
-![image-20211019190147537](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019190147537.png)
+![image-20211019190147537](./pic/2.png)
 
 
 
 查看自己的文件下的内容：
 
-![image-20211019190255911](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019190255911.png)
+![image-20211019190255911](./pic/3.png)
 
 
 
 在本地创建一个`test.txt` 文件：
 
-![image-20211019190519815](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019190519815.png)
+![image-20211019190519815](./pic/4.png)
 
 
 
 将本地文件传输至DFS 中：
 
-![image-20211019192405786](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019192405786.png)
+![image-20211019192405786](./pic/5.png)
 
 可以看到文件以及传输到DFS 上。`copyFromLocal/copyToLocal `用于本地文件系统与DFS之间文件的复制，`moveFromLocal/moveToLocal` 用于本地文件系统与DFS 之间文件的移动。
 
@@ -48,7 +48,7 @@
 
 查看`copyFromLocal `的用法，可以看到该指令有两个必填参数，第一个参数是本地路径，第二个参数是DFS 路径：
 
-![image-20211019193527109](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019193527109.png)
+![image-20211019193527109](./pic/6.png)
 
 
 
@@ -58,13 +58,13 @@
 
 在本地运行如下命令（将服务器的9870 端口映射到本地的9870 端口）：
 
-![image-20211019194048376](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019194048376.png)
+![image-20211019194048376](./pic/7.png)
 
 
 
 在本地的浏览器中输入`localhost:9870` 打开9870 端口，即可查看hadoop 运行情况，可通过此界面查看hadoop 的一些基本参数和job/task 的完成情况。
 
-![image-20211019194149980](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211019194149980.png)
+![image-20211019194149980](./pic/8.png)
 
 
 
@@ -108,9 +108,9 @@ def copyToLocal(self, dfs_path, local_path):
 
 测试结果：
 
-![image-20211020141544542](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020141544542.png)
+![image-20211020141544542](./pic/9.png)
 
-![image-20211020141601068](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020141601068.png)
+![image-20211020141601068](./pic/10.png)
 
 
 
@@ -135,7 +135,7 @@ def ls(self, dfs_path):
 
 测试结果：
 
-![image-20211020142545645](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020142545645.png)
+![image-20211020142545645](./pic/11.png)
 
 
 
@@ -172,9 +172,9 @@ def rm(self, dfs_path):
 
 测试结果：
 
-![image-20211020142038182](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020142038182.png)
+![image-20211020142038182](./pic/12.png)
 
-![image-20211020142050436](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020142050436.png)
+![image-20211020142050436](./pic/13.png)
 
 
 
@@ -290,11 +290,11 @@ def copyFromLocal(self, local_path, dfs_path):
 
 thumm01：
 
-![image-20211020164611030](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020164611030.png)
+![image-20211020164611030](./pic/14.png)
 
 thumm02：
 
-![image-20211020164727262](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211020164727262.png)
+![image-20211020164727262](./pic/15.png)
 
 
 
@@ -474,16 +474,17 @@ def repair_item(self, host_name, dfs_path):
 
 关闭thumm05：
 
-![image-20211021214037069](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211021214037069.png)
+![image-20211021214037069](./pic/16.png)
 
 Name_node检测出thumm05断开，开启修复机制：
 
-![image-20211021214205387](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211021214205387.png)
+![image-20211021214205387](./pic/17.png)
 
 其它的节点在该过程中同时接收ping消息以及备份时的传送消息：
 
-![image-20211021214307530](C:\Users\Rookiecj\AppData\Roaming\Typora\typora-user-images\image-20211021214307530.png)
+![image-20211021214307530](./pic/18.png)
 
 
 
 #### 6.1 Bonus
+
