--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -430,6 +430,7 @@ def repair_item(self, host_name, dfs_path):
         if host == host_name:
             lost_blk.append(block_num)
 
+    # 对每一个丢失的块进行修复
     for block in lost_blk:
         temp_host_list = host_list.copy()
 
@@ -487,4 +488,188 @@ Name_node检测出thumm05断开，开启修复机制：
 
 
 #### 6.1 Bonus
+
+额外的容错功能，数据丢失检验：在服务器都保持正常的情况下（不出现挂掉的情况），系统也会自动检查维护数据块，检验是否有数据块的丢失。
+
+首先，修改name_node.py中的`run`函数，添加一个线程，用该线程检测是否有数据丢失：
+
+```python
+def run(self):  # 启动NameNode
+    # 创建一个监听的socket
+    listen_fd = socket.socket()
+    try:
+        # 监听端口
+        listen_fd.bind(("0.0.0.0", name_node_port))
+        listen_fd.listen(5)
+        print("Name node started")
+        # 添加线程，用该线程检测是否有服务器挂掉
+        t = threading.Thread(target=self.heart_beat)
+        t.start()
+        # 添加线程，用该线程检测是否有数据丢失
+        t2 = threading.Thread(target=self.data_loss_check)
+        t2.start()
+
+        while True:
+            # 等待连接，连接后返回通信用的套接字
+            sock_fd, addr = listen_fd.accept()
+            print("connected by {}".format(addr))
+
+            try:
+                # 获取请求方发送的指令
+                request = str(sock_fd.recv(128), encoding='utf-8')
+                request = request.split()  # 指令之间使用空白符分割
+                print("Request: {}".format(request))
+
+                cmd = request[0]  # 指令第一个为指令类型
+
+                if cmd == "ls":  # 若指令类型为ls, 则返回DFS上对于文件、文件夹的内容
+                    dfs_path = request[1]  # 指令第二个参数为DFS目标地址
+                    response = self.ls(dfs_path)
+                elif cmd == "get_fat_item":  # 指令类型为获取FAT表项
+                    dfs_path = request[1]  # 指令第二个参数为DFS目标地址
+                    response = self.get_fat_item(dfs_path)
+                elif cmd == "new_fat_item":  # 指令类型为新建FAT表项
+                    dfs_path = request[1]  # 指令第二个参数为DFS目标地址
+                    file_size = int(request[2])
+                    response = self.new_fat_item(dfs_path, file_size)
+                elif cmd == "rm_fat_item":  # 指令类型为删除FAT表项
+                    dfs_path = request[1]  # 指令第二个参数为DFS目标地址
+                    response = self.rm_fat_item(dfs_path)
+                elif cmd == "format":
+                    response = self.format()
+                else:  # 其他位置指令
+                    response = "Undefined command: " + " ".join(request)
+
+                print("Response: {}".format(response))
+                sock_fd.send(bytes(response, encoding='utf-8'))
+            except KeyboardInterrupt:  # 如果运行时按Ctrl+C则退出程序
+                break
+            except Exception as e:  # 如果出错则打印错误信息
+                print(e)
+            finally:
+                sock_fd.close()  # 释放连接
+    except KeyboardInterrupt:  # 如果运行时按Ctrl+C则退出程序
+        pass
+    except Exception as e:  # 如果出错则打印错误信息
+        print(e)
+    finally:
+        listen_fd.close()  # 释放连接
+```
+
+
+
+而后，在name_node.py中添加`data_loss_check`函数，检测是否有文件块丢失：
+
+```python
+# 检测是否有文件块丢失
+def data_loss_check(self):
+    time.sleep(20)
+    while True:
+        self.check_dfs("/")  # 开始检查目录下的所有文件
+        time.sleep(20)
+```
+
+
+
+我们在name_node.py中添加`check_dfs`函数，模拟一次检测操作，NameNode检测目录下的所有文件，查看是否存在缺失的情况。我们通过遍历NameNode目录下的所有fat表，检查每个fat表里对应的数据块来实现：
+
+```python
+# 模拟一次检测操作，NameNode检测目录下的所有文件，查看是否存在缺失的情况
+def check_dfs(self, dfs_dir):
+    dir = name_node_dir + dfs_dir
+    all_list = os.listdir(dir)
+    # 遍历NameNode目录下的所有fat表，检查每个fat表里对应的数据块
+    for item in all_list:
+        path = os.path.join(dir, item)
+        if os.path.isfile(path):
+            self.checkout_item(dfs_dir + '/' + item)
+        else:
+            self.check_dfs(dfs_dir + item)
+```
+
+
+
+针对每一个fat表，我们在我们在name_node.py中添加`checkout_item`函数，检查某个fat表下的所有数据是否正常，如出现异常则进行修复：
+
+```python
+# 检查某个fat表下的所有数据是否正常，如出现异常则进行修复
+def checkout_item(self, dfs_path):
+    local_path = name_node_dir + dfs_path
+    fat = pd.read_csv(local_path)
+    # 检查每一条数据块是否存在
+    for idx, row in fat.iterrows():
+        data_node_sock = socket.socket()
+        data_node_sock.connect((row['host_name'], data_node_port))
+        blk_path = dfs_path + ".blk{}".format(row['blk_no'])
+        request = "check {}".format(blk_path)
+        data_node_sock.send(bytes(request, encoding='utf-8'))
+        response_msg = str(data_node_sock.recv(BUF_SIZE), encoding='utf-8')
+        data_node_sock.close()
+
+        if response_msg == 'Normal':  # 正常情况
+            continue
+        else:  # 数据块发生丢失的情况，进行相关的恢复工作
+            print("{} was lost.".format(blk_path))
+
+            # 寻找包含数据块的服务器
+            choice_list = fat[fat['blk_no'] == row['blk_no']]['host_name']
+            for i in range(choice_list.size):
+                info_host = choice_list.iloc[i]
+                if info_host != row['host_name']:
+                    break
+
+            # 从包含缺失数据块的服务器中拷贝一份放到备份服务器中
+            recv_data_node_sock = socket.socket()
+            recv_data_node_sock.connect((info_host, data_node_port))
+            request = "load {}".format(blk_path)
+            recv_data_node_sock.send(bytes(request, encoding='utf-8'))
+            time.sleep(0.2)  # 两次传输需要间隔一段时间，避免粘包
+            data = recv_data_node_sock.recv(BUF_SIZE)
+            data = str(data, encoding='utf-8')
+            recv_data_node_sock.close()
+
+            # 存放到丢失数据块服务器中
+            push_data_node_sock = socket.socket()
+            push_data_node_sock.connect((row['host_name'], data_node_port))
+            request = "store {}".format(blk_path)
+            push_data_node_sock.send(bytes(request, encoding='utf-8'))
+            time.sleep(0.2)  # 两次传输需要间隔一段时间，避免粘包
+            push_data_node_sock.send(bytes(data, encoding='utf-8'))
+            push_data_node_sock.close()
+
+            print("Passing {} from {} to {}.".format(blk_path, info_host, row['host_name']))
+```
+
+
+
+此外，我们还在data_node.py中添加了check的指令，以检测本地的数据块是否丢失：
+
+```python
+# check指令，用于检测本地的数据块是否丢失
+def check(self, dfs_path):
+    # 本地路径
+    local_path = data_node_dir + dfs_path
+    if os.path.exists(local_path):
+        return "Normal"
+    else:
+        return "Disappear"
+```
+
+
+
+**测试结果**
+
+在这里，我们同时开启宕机检测与数据块丢失检测。
+
+首先，模拟数据块丢失：
+
+![image-20211022153300886](./pic/19.png)
+
+Name Node检测到数据块丢失，并启动恢复：
+
+![image-20211022153404980](./pic/20.png)
+
+Data Node上的情况：
+
+![image-20211022153544470](./pic/20.png)
 
