--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -673,3 +673,99 @@ Data Node上的情况：
 
 ![image-20211022153544470](./pic/20.png)
 
+
+
+## 四、MapReduce
+
+首先，针对实验一中准备的美股信息数据集进行预处理，使用preprocess_dataset.py将数值信息从csv文件中读出，并保存于data.txt文件中：
+
+```python
+import pandas as pd
+import os
+
+dataset_dir = "/home/dsjxtjc/2021214308/datasets/nasdaq_stock/full_history/"
+dst_dir = "/home/dsjxtjc/2021214308/MyDFS/test/data.txt"
+all_list = os.listdir(dataset_dir)
+f = open(dst_dir, "w")
+counter = 0
+
+for item in all_list:
+    local_path = dataset_dir + item
+    csv_file = pd.read_csv(local_path)
+    csv_file = csv_file['open']
+    for i in range(csv_file.size):
+        f.write(str(csv_file.iloc[i]) + "\n")
+    counter = counter + 1
+    print("{} already processed. {}/{}".format(item, counter, len(all_list)))
+```
+
+
+
+#### **数据分割方案**
+
+我们使用前文所述的-copyFromLocal命令将数据存储到dfs上，并在此过程中进行数据分割。
+
+关于数据分割，我们在此处的分割目的是尽可能地使各个服务器上存储的数据负载均衡，这样在计算均值以及方差时各个服务器间计算时间基本一致，尽可能减少额外的等待时间。
+
+我们修改name_node.py中的`new_fat_item`函数，为了负载均衡，我们在分发数据块时，每次轮流给每个节点分发数据块：
+
+```python
+def new_fat_item(self, dfs_path, file_size):
+    nb_blks = int(math.ceil(file_size / dfs_blk_size))
+    print(file_size, nb_blks)
+
+    # todo 如果dfs_replication为复数时可以新增host_name的数目
+    data_pd = pd.DataFrame(columns=['blk_no', 'host_name', 'blk_size'])
+
+    counter = 0
+    for i in range(nb_blks):
+        if dfs_replication == 1:
+            blk_no = i
+            # host_name = np.random.choice(host_list, size=dfs_replication, replace=False)[0]
+            # 为了负载均衡，每次轮流给每个节点分发数据
+            host_name = host_list[counter]
+            counter = (counter + 1) % len(host_list)
+            blk_size = min(dfs_blk_size, file_size - i * dfs_blk_size)
+            data_pd.loc[i] = [blk_no, host_name, blk_size]
+        else:  # 针对需要些多个副本的情况
+            blk_no = i
+            host_name_list = np.random.choice(host_list, size=dfs_replication, replace=False)
+            blk_size = min(dfs_blk_size, file_size - i * dfs_blk_size)
+            for j in range(dfs_replication):  # 每次随机选取N个host来写入当前块（N为dfs_replication）
+                host_name = host_name_list[j]
+                data_pd.loc[(i - 1) * dfs_replication + j] = [blk_no, host_name, blk_size]
+
+    # 获取本地路径
+    local_path = name_node_dir + dfs_path
+
+    # 若目录不存在则创建新目录
+    os.system("mkdir -p {}".format(os.path.dirname(local_path)))
+    # 保存FAT表为CSV文件
+    data_pd.to_csv(local_path, index=False)
+    # 同时返回CSV内容到请求节点
+    return data_pd.to_csv(index=False)
+```
+
+此外，由于数据集较大，进行分发所耗费的时间过长，我们修改了common.py中的一些配置，将`dfs_blk_size`与`BUF_SIZE`进行了增大，并且将`dfs_replication`调整为1：
+
+```python
+dfs_replication = 1
+dfs_blk_size = 65536  # * 1024
+
+# NameNode和DataNode数据存放位置
+name_node_dir = "./dfs/name"
+data_node_dir = "./dfs/data"
+
+data_node_port = 4308  # DataNode程序监听端口
+name_node_port = 14308  # NameNode监听端口
+
+# 集群中的主机列表
+host_list = ['thumm01', 'thumm02', 'thumm03', 'thumm04', 'thumm05']
+name_node_host = "thumm01"
+
+BUF_SIZE = dfs_blk_size * 100
+```
+
+
+
+#### 任务分配
