--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -705,39 +705,37 @@ for item in all_list:
 
 我们使用前文所述的-copyFromLocal命令将数据存储到dfs上，并在此过程中进行数据分割。
 
-关于数据分割，我们在此处的分割目的是尽可能地使各个服务器上存储的数据负载均衡，这样在计算均值以及方差时各个服务器间计算时间基本一致，尽可能减少额外的等待时间。
+- 关于数据分割，我们在此处的分割目的是尽可能地使各个服务器上存储的数据负载均衡，这样在计算均值以及方差时各个服务器间计算时间基本一致，尽可能减少额外的等待时间。
+- 此外，由于我们的数据是，若直接按原有的分块方式，会导致元数据被截断的问题。为了解决这个问题，我们使用行来分割数据，计算每一行数据的平均大小、每一个数据块中平均的行数，进而推出需要划分成多少块。
 
-我们修改name_node.py中的`new_fat_item`函数，为了负载均衡，我们在分发数据块时，每次轮流给每个节点分发数据块：
+我们修改name_node.py中的`new_fat_item`函数，创建了一个新函数`new_fat_item_lines`。计算每一行数据的平均大小、每一个数据块中平均的行数，进而推出需要划分成多少块；为了负载均衡，我们在分发数据块时，每次轮流给每个节点分发数据块：
 
 ```python
-def new_fat_item(self, dfs_path, file_size):
-    nb_blks = int(math.ceil(file_size / dfs_blk_size))
-    print(file_size, nb_blks)
+# 按行划分传输文件
+def new_fat_item_lines(self, dfs_path, file_size, line_number):
+    # 计算每一行文件占用的大小
+    line_avg_size = int(math.ceil(file_size / line_number))
+    # 计算每个blk中平均的行数
+    lines_per_blk = int(math.floor(big_dfs_blk_size / line_avg_size))
 
-    # todo 如果dfs_replication为复数时可以新增host_name的数目
+    number_blks = int(math.ceil(line_number / lines_per_blk))
+
+    print(file_size, line_number, line_avg_size, lines_per_blk)
+
     data_pd = pd.DataFrame(columns=['blk_no', 'host_name', 'blk_size'])
 
     counter = 0
-    for i in range(nb_blks):
-        if dfs_replication == 1:
-            blk_no = i
-            # host_name = np.random.choice(host_list, size=dfs_replication, replace=False)[0]
-            # 为了负载均衡，每次轮流给每个节点分发数据
-            host_name = host_list[counter]
-            counter = (counter + 1) % len(host_list)
-            blk_size = min(dfs_blk_size, file_size - i * dfs_blk_size)
-            data_pd.loc[i] = [blk_no, host_name, blk_size]
-        else:  # 针对需要些多个副本的情况
-            blk_no = i
-            host_name_list = np.random.choice(host_list, size=dfs_replication, replace=False)
-            blk_size = min(dfs_blk_size, file_size - i * dfs_blk_size)
-            for j in range(dfs_replication):  # 每次随机选取N个host来写入当前块（N为dfs_replication）
-                host_name = host_name_list[j]
-                data_pd.loc[(i - 1) * dfs_replication + j] = [blk_no, host_name, blk_size]
+    for i in range(number_blks):
+        blk_no = i
+        # 为了负载均衡，每次轮流给每个节点分发数据
+        host_name = host_list[counter]
+        counter = (counter + 1) % len(host_list)
+        blk_size = min(lines_per_blk * line_avg_size,
+                       line_number * line_avg_size - i * lines_per_blk * line_avg_size)
+        data_pd.loc[i] = [blk_no, host_name, blk_size]
 
     # 获取本地路径
     local_path = name_node_dir + dfs_path
-
     # 若目录不存在则创建新目录
     os.system("mkdir -p {}".format(os.path.dirname(local_path)))
     # 保存FAT表为CSV文件
@@ -746,11 +744,64 @@ def new_fat_item(self, dfs_path, file_size):
     return data_pd.to_csv(index=False)
 ```
 
-此外，由于数据集较大，进行分发所耗费的时间过长，我们修改了common.py中的一些配置，将`dfs_blk_size`与`BUF_SIZE`进行了增大，并且将`dfs_replication`调整为1：
+我们在client.py中，修改`copyFromLocal`函数，创建了一个新函数`copyFromLocalLines`，我们使用行来分割数据块；并且，为了传输地更加高效，我们使用scp命令来传输大文件（相关的文件夹需要提前建好，否则会报错）：
+
+```python
+# 按行划分传输文件
+def copyFromLocalLines(self, local_path, dfs_path):
+    file_size = os.path.getsize(local_path)
+    # 计算每个文件的行数
+    line_number = int(os.popen('cat {} | wc -l'.format(local_path)).read())
+    print("File size: {}".format(file_size))
+    print("File lines: {:d}".format(line_number))
+
+    # 计算每行的平均占用尺寸
+    line_avg_size = int(math.ceil(file_size / line_number))
+
+    # 每个blk里面的平均的行数
+    lines_per_blk = int(math.floor(big_dfs_blk_size / line_avg_size))
+    print("Lines per blk: {:d}".format(lines_per_blk))
+
+    request = "new_fat_item {} {} {}".format(dfs_path, file_size, line_number)
+    print("Request: {}".format(request))
+
+    # 从NameNode获取一张FAT表
+    self.name_node_sock.send(bytes(request, encoding='utf-8'))
+    fat_pd = self.name_node_sock.recv(BUF_SIZE)
+
+    # 打印FAT表，并使用pandas读取
+    fat_pd = str(fat_pd, encoding='utf-8')
+    print("Fat: \n{}".format(fat_pd))
+    fat = pd.read_csv(StringIO(fat_pd))
+
+    # 根据FAT表逐个向目标DataNode发送数据块
+    temp_file = local_path + '_temp'    # 用于写拆分的小文件的temp_file
+    with open(local_path, "r") as origin_file:
+        line_counter = 0
+        for idx, row in fat.iterrows():
+            # 按行写拆分的小文件，避免存在元数据在划分过程中被截断
+            depart_file = open(temp_file, "w")
+            for line in origin_file:
+                depart_file.write(line)
+                line_counter = line_counter + 1
+                if line_counter >= lines_per_blk:
+                    depart_file.close()
+                    line_counter = 0
+                    break
+            if depart_file:
+                depart_file.close()
+            # 使用scp传输大文件
+            os.system("scp {} {}:{}{}.blk{}".format(temp_file, row['host_name'], "~/MyDFS/dfs/data",
+                                                    dfs_path, row['blk_no']))
+    os.remove(temp_file)
+```
+
+此外，由于数据集较大，进行分发所耗费的时间过长，我们修改了common.py中的一些配置，以加快分发的速度；我们新定义了大文件传输块大小`big_dfs_blk_size`，并且将`dfs_replication`调整为1：
 
 ```python
 dfs_replication = 1
 dfs_blk_size = 65536  # * 1024
+big_dfs_blk_size = 8388608
 
 # NameNode和DataNode数据存放位置
 name_node_dir = "./dfs/name"
@@ -769,3 +820,155 @@ BUF_SIZE = dfs_blk_size * 100
 
 
 #### 任务分配
+
+MapReduce的Paper中，作者发现，大多数计算都可以拆分成Map, Shuffle, Reduce三个阶段：
+
+- Map阶段中，每台机器先处理本机上的数据。
+- 各个机器处理完自己的数据后，我们再把他们的结果汇总，这就是Shuffle阶段。
+- 最后，进行最后一步处理，这就是Reduce。
+
+在本次任务中，我们所需要计算的是均值与方差，所需的结果文件相对较小，因此我们将Name Node作为reducer，Data Node作为mapper。
+
+具体的执行框架上，Name Node接收到计算的消息后，调用多线程，同时向多个服务器发送计算的消息；多个服务器（Data Node）在本地完成计算后，将数据传输回Name Node，Name Node开启的多个线程收集多个服务器map出的值；最后，Name Node调用reducer整合数据，获得最终的整体数据。name_node.py中的`calculte`函数负责执行这一整体框架：
+
+```python
+# 负责计算均值或方差的命令文件，负责接收命令，调用计算，返回相关数据
+def calculte(self, option, dfs_path, filename):
+    thread_list = []
+    # 调用多线程，同时向多个服务器发送计算的消息
+    for host in host_list:
+        t = MyThread(self.calculate_comunicater, args=(option, dfs_path, filename, host))
+        thread_list.append(t)
+        t.start()
+    map_list = []
+    # 开启的多个线程收集多个服务器map出的值
+    for t in thread_list:
+        t.join()
+        if option == "var":
+            length, mean, var = t.get_result()
+            map_list.append((length, mean, var))
+        elif option == "mean":
+            length, mean = t.get_result()
+            map_list.append((length, mean))
+    # 调用reducer整合数据，获得最终的整体数据
+    result = self.reducer(option, map_list)
+    return str(result)
+```
+
+我们使用name_node.py中的`calculate_comunicater`函数作为多线程函数，与各个服务器间进行通信，分配任务并收集计算出的值：
+
+```python
+# 多线程函数，负责与各个服务器进行通信
+def calculate_comunicater(self, option, dfs_path, filename, host_name):
+    # 发送计算指令
+    data_node_sock = socket.socket()
+    data_node_sock.connect((host_name, data_node_port))
+    request = "map {} {} {}".format(option, dfs_path, filename)
+    data_node_sock.send(bytes(request, encoding='utf-8'))
+    # 接收服务器计算出的值
+    response_msg = str(data_node_sock.recv(BUF_SIZE), encoding='utf-8')
+    response = response_msg.split()
+    if option == "var":
+        length = int(response[0])
+        mean = float(response[1])
+        var = float(response[2])
+        return length, mean, var
+    elif option == "mean":
+        length = int(response[0])
+        mean = float(response[1])
+        return length, mean
+```
+
+在每个服务器上，需要进行Map阶段，各自计算保存在其上的数据的均值与方差，我们使用data_node.py中的`mapper`函数来完成。我们使用正则表达式寻找符合条件的分块文件，对本服务器下所有的该文件的分块文件进行统计，计算均值或方差。
+
+```python
+# 在data_node上执行mapper操作
+def mapper(self, dfs_path, filename, option):
+    # 使用正则表达式寻找符合条件的分块文件
+    read_format = re.compile(r"{}.(\w)*".format(filename))
+    total_list = []
+
+    # 对本服务器下所有的该文件的分块文件进行统计，计算均值或方差
+    all_list = os.listdir(data_node_dir + dfs_path)
+    for file in all_list:
+        if not read_format.search(file) == None:
+            read_file = read_format.search(file).group(0)
+            read_dir = data_node_dir + dfs_path + read_file
+            data_list = read_from_txt(read_dir)
+            total_list.extend(data_list)
+
+    # 均值无论是在求均值还是方差时都会用到，故必须计算
+    # 如果操作是求方差，则额外求方差
+    if option == "var":
+        mean = np.mean(total_list)
+        var = np.var(total_list)
+        length = len(total_list)
+        return "{} {} {}".format(length, mean, var)
+    elif option == "mean":
+        mean = np.mean(total_list)
+        length = len(total_list)
+        return "{} {}".format(length, mean)
+```
+
+
+
+#### 整合方案
+
+每台服务器map出其各自的均值与方差后，我们需要进行整合得到最终的值，也就是Reduce阶段的操作。
+
+我们可以使用增量计算均值与方差的方式，将各个服务器计算出的均值或方差转化为最终整体数据的均值与方差：
+
+假设历史数据的均值为$\bar{H}$，方差为$\sigma_{H}^{2}$，增量数据的均值为$\bar{A}$，方差为$\sigma_{A}^{2}$，我们可以求得历史数据和增量数据的总均值$\bar{X}$与方差$\sigma^{2}$：
+$$
+\bar{X} = \frac{M\bar{H} + N\bar{A}}{M+N}
+$$
+
+$$
+\sigma^{2} = \frac{M[\sigma_H^2] + M(\bar{X}- \bar{H})^2 + N[\sigma_A^2 + (\bar{X}-\bar{A})^2]}{M+N}
+$$
+
+我们通过name_node.py中的`reducer`函数来实现增量计算整合数据，得到最终整体数据的结果：
+
+```python
+# 整合数据，计算总的均值或方差
+def reducer(self, option, map_list):
+    avg = 0.0
+    var_t = 0.0
+    total_length = 0
+    # 增量计算均值
+    if option == "mean":
+        for length, mean in map_list:
+            avg = (avg * total_length + mean * length) / (total_length + length)
+            total_length = total_length + length
+        return avg
+    # 增量计算方差
+    elif option == "var":
+        for length, mean, var in map_list:
+            avg_new = (avg * total_length + mean * length) / (total_length + length)
+            var_t = (total_length * (var_t + (avg_new - avg) ** 2) + length * (var + (avg_new - mean) ** 2)) /  (total_length + length)
+            avg = avg_new
+            total_length = total_length + length
+        return var_t
+```
+
+
+
+#### 测试结果
+
+数据分割：
+
+![image-20211025100513147](./pic/22.png)
+
+在本地计算均值、方差：
+
+![image-20211025100605254](./pic/23.png)
+
+使用MapReduce框架计算均值、方差：
+
+![image-20211025101301451](./pic/24.png)
+
+可以看到：
+
+- MapReduce框架计算出的均值与方差和本地计算的值基本一致，说明了本系统的稳定性。
+- 除此之外，由于MapReduce框架使用的是多线程并发的分布式计算，最终计算大数据量的均值与方差的效率也要远高于在本地单台服务器计算。
+
