实验报告更新，补充数据集描述

--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -677,6 +677,10 @@ Data Node上的情况：
 
 ## 四、MapReduce
 
+#### 数据集
+
+我们在实验一种为计算均值、方差准备了*AMEX, NYSE, NASDAQ stock histories*数据集。数据集大小为**2.9GB**，存储目录为**/home/dsjxtjc/2021214308/datasets/nasdaq_stock**。其包含了AMEX, NYSE, NASDAQ等多个证券交易所的股票历史信息。
+
 首先，针对实验一中准备的美股信息数据集进行预处理，使用preprocess_dataset.py将数值信息从csv文件中读出，并保存于data.txt文件中：
 
 ```python
