修正公式错误

--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -928,7 +928,7 @@ $$
 $$
 
 $$
-\sigma^{2} = \frac{M[\sigma_H^2] + M(\bar{X}- \bar{H})^2 + N[\sigma_A^2 + (\bar{X}-\bar{A})^2]}{M+N}
+\sigma^{2} = \frac{M[\sigma_H^2 + M(\bar{X}- \bar{H})^2] + N[\sigma_A^2 + (\bar{X}-\bar{A})^2]}{M+N}
 $$
 
 我们通过name_node.py中的`reducer`函数来实现增量计算整合数据，得到最终整体数据的结果：
