修正代码错误

--- a/实验二/2021214308-陈鋆-Lab2.md
+++ b/实验二/2021214308-陈鋆-Lab2.md
@@ -312,7 +312,7 @@ def run(self):  # 启动NameNode
         listen_fd.listen(5)
         print("Name node started")
         # 添加线程，用该线程检测是否有服务器挂掉
-        t = threading.Thread(target=self.heart_beat())
+        t = threading.Thread(target=self.heart_beat)
         t.start()
         while True:
             # 等待连接，连接后返回通信用的套接字
